infra/services/observability/argocd/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.mydomain.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 8080
  tls:
    certResolver: le
